@@ -1,6 +1,7 @@
 48
 ================
 
+21/03/24 Fix log audit messages not appearing on parent record
 19/03/24 csvimport: Allow importing of non-ascii chars
 18/03/24 Show mother info in banner for baby animals #836
 18/03/24 Clone animal control incident #1101
